And get the vertical spacing correct

--- a/frontend/src/Layouts/Footer/Footer.module.scss
+++ b/frontend/src/Layouts/Footer/Footer.module.scss
@@ -94,8 +94,6 @@
     color: white;
     display: flex;
     justify-content: center;
-    padding-top: 10px;
-    margin-top: 20px;
     font-size: 0.8rem;
     a {
         text-decoration: none;
